--- a/dashboard.html
+++ b/dashboard.html
@@ -14,14 +14,41 @@
         </header>
         <main class="main-content">
             <div class="card">
-                <h2> Deadpool & Wolverine</h2>
-                <iframe src="https://filemoon.sx/e/te74gxx6qgci" width="100%" height="370px" scrolling="NO" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></div>
+                <h2>Deadpool & Wolverine</h2>
+                <iframe 
+                    src="https://filemoon.sx/e/te74gxx6qgci" 
+                    width="100%" 
+                    height="370px" 
+                    scrolling="no" 
+                    allowfullscreen="true" 
+                    webkitallowfullscreen="true" 
+                    mozallowfullscreen="true">
+                </iframe>
+            </div>
             <div class="card">
                 <h2>Ready Player One</h2>
-                <iframe src="https://filemoon.sx/e/lri81845b99q" width="100%" height="370px" scrolling="NO" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>            </div>
+                <iframe 
+                    src="https://filemoon.sx/e/lri81845b99q" 
+                    width="100%" 
+                    height="370px" 
+                    scrolling="no" 
+                    allowfullscreen="true" 
+                    webkitallowfullscreen="true" 
+                    mozallowfullscreen="true">
+                </iframe>
+            </div>
             <div class="card">
-                <h2>Fast & Furious : Hobbs & Shaw</h2>
-                <iframe src="https://filemoon.sx/e/ye3u08n1p1qm" width="100%" height="370px" scrolling="NO" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe>            </div>
+                <h2>Fast & Furious: Hobbs & Shaw</h2>
+                <iframe 
+                    src="https://filemoon.sx/e/ye3u08n1p1qm" 
+                    width="100%" 
+                    height="370px" 
+                    scrolling="no" 
+                    allowfullscreen="true" 
+                    webkitallowfullscreen="true" 
+                    mozallowfullscreen="true">
+                </iframe>
+            </div>
         </main>
     </div>
 </body>
