--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
-
     <div class="dashboard-container">
         <!-- Entête -->
         <header class="header">
@@ -23,31 +22,80 @@
                 <div class="movies" id="fast-furious-movies">
                     <div class="card">
                         <h3>Fast & Furious 1</h3>
-                        <iframe src="https://filemoon.sx/e/dluwszk086er" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/dluwszk086er" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 2</h3>
-                        <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/pdxjuwy2wwd1" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 4</h3>
-                        <iframe src="https://filemoon.sx/e/5wja6y3ff2u6" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/5wja6y3ff2u6" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 5</h3>
-                        <iframe src="https://filemoon.sx/e/ckd4zeqxc0ks" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/ckd4zeqxc0ks" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 6</h3>
-                        <iframe src="https://filemoon.sx/e/j1ng3m4km0ec" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/j1ng3m4km0ec" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 10</h3>
-                        <iframe src="https://filemoon.sx/e/qsmsrk2k0zml" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/qsmsrk2k0zml" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious</h3>
-                        <iframe src="https://filemoon.sx/e/ye3u08n1p1qm" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/ye3u08n1p1qm" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                 </div>
             </section>
@@ -58,15 +106,36 @@
                 <div class="movies" id="deadpool-movies">
                     <div class="card">
                         <h3>Deadpool 1</h3>
-                        <iframe src="https://filemoon.sx/e/niqfq9ldwoxt" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/niqfq9ldwoxt" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                     <div class="card">
                         <h3>Deadpool 2</h3>
-                        <iframe src="https://filemoon.sx/e/k35iogdyle2h" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/k35iogdyle2h" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                     <div class="card">
                         <h3>Deadpool & Wolverine</h3>
-                        <iframe src="https://filemoon.sx/e/te74gxx6qgci" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/te74gxx6qgci" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                 </div>
             </section>
@@ -77,7 +146,14 @@
                 <div class="movies" id="ready-player-one-movies">
                     <div class="card">
                         <h3>Ready Player One</h3>
-                        <iframe src="https://filemoon.sx/e/lri81845b99q" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
+                        <iframe 
+                            src="https://filemoon.sx/e/lri81845b99q" 
+                            width="100%" 
+                            height="200" 
+                            scrolling="no" 
+                            allowfullscreen 
+                            sandbox="allow-same-origin allow-scripts">
+                        </iframe>
                     </div>
                 </div>
             </section>
@@ -101,6 +177,5 @@
             window.location.href = 'index.html';
         }
     </script>
-
 </body>
 </html>
