--- a/dashboard.html
+++ b/dashboard.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Films</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="Dashboard.css">
 </head>
 <body>
+    <!-- Bannière de recommandation -->
+    <div id="adblock-notice" style="background: #f44336; color: white; padding: 10px; text-align: center;">
+        <p>Pour une meilleure expérience sans publicités, utilisez un navigateur avec bloqueur de publicités comme 
+            <a href="https://brave.com" target="_blank" style="color: #ffcc00;">Brave</a> 
+            ou installez 
+            <a href="https://ublockorigin.com/" target="_blank" style="color: #ffcc00;">uBlock Origin</a>.
+        </p>
+    </div>
+
     <div class="dashboard-container">
         <!-- Entête -->
         <header class="header">
@@ -22,80 +31,31 @@
                 <div class="movies" id="fast-furious-movies">
                     <div class="card">
                         <h3>Fast & Furious 1</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/dluwszk086er" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/dluwszk086er" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 2</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/pdxjuwy2wwd1" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 4</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/5wja6y3ff2u6" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/5wja6y3ff2u6" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 5</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/ckd4zeqxc0ks" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/ckd4zeqxc0ks" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 6</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/j1ng3m4km0ec" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/j1ng3m4km0ec" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 10</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/qsmsrk2k0zml" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/qsmsrk2k0zml" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/ye3u08n1p1qm" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/ye3u08n1p1qm" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
@@ -106,36 +66,15 @@
                 <div class="movies" id="deadpool-movies">
                     <div class="card">
                         <h3>Deadpool 1</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/niqfq9ldwoxt" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/niqfq9ldwoxt" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Deadpool 2</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/k35iogdyle2h" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/k35iogdyle2h" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Deadpool & Wolverine</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/te74gxx6qgci" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/te74gxx6qgci" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
@@ -146,14 +85,7 @@
                 <div class="movies" id="ready-player-one-movies">
                     <div class="card">
                         <h3>Ready Player One</h3>
-                        <iframe 
-                            src="https://filemoon.sx/e/lri81845b99q" 
-                            width="100%" 
-                            height="200" 
-                            scrolling="no" 
-                            allowfullscreen 
-                            sandbox="allow-same-origin allow-scripts">
-                        </iframe>
+                        <iframe src="https://filemoon.sx/e/lri81845b99q" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
