--- a/dashboard.html
+++ b/dashboard.html
@@ -31,15 +31,27 @@
                 <div class="movies" id="fast-furious-movies">
                     <div class="card">
                         <h3>Fast & Furious 1</h3>
-                        <iframe src="https://filemoon.sx/e/dluwszk086er" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
+                        <iframe src="https://filemoon.sx/e/dluwszk086er" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 2</h3>
-                        <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
+                        <iframe src="https://filemoon.sx/e/pdxjuwy2wwd1" scrolling="no" allowfullscreen></iframe>
                     </div>
                     <div class="card">
                         <h3>Fast & Furious 4</h3>
-                        <iframe src="https://filemoon.sx/e/5wja6y3ff2u6" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
+                        <iframe src="https://filemoon.sx/e/5wja6y3ff2u6" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                    <div class="card">
+                        <h3>Fast & Furious 5</h3>
+                        <iframe src="https://filemoon.sx/e/ckd4zeqxc0ks" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                    <div class="card">
+                        <h3>Fast & Furious 6</h3>
+                        <iframe src="https://filemoon.sx/e/j1ng3m4km0ec" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                    <div class="card">
+                        <h3>Fast & Furious 10</h3>
+                        <iframe src="https://filemoon.sx/e/qsmsrk2k0zml" scrolling="no" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
@@ -50,7 +62,26 @@
                 <div class="movies" id="deadpool-movies">
                     <div class="card">
                         <h3>Deadpool 1</h3>
-                        <iframe src="https://filemoon.sx/e/niqfq9ldwoxt" width="100%" height="200" scrolling="no" allowfullscreen></iframe>
+                        <iframe src="https://filemoon.sx/e/niqfq9ldwoxt" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                    <div class="card">
+                        <h3>Deadpool 2</h3>
+                        <iframe src="https://filemoon.sx/e/k35iogdyle2h" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                    <div class="card">
+                        <h3>Deadpool & Wolverine</h3>
+                        <iframe src="https://filemoon.sx/e/te74gxx6qgci" scrolling="no" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Catégorie Ready Player One -->
+            <section class="category" id="ready-player-one">
+                <h2>Ready Player One <button class="toggle-btn" onclick="toggleCategory('ready-player-one')">Afficher / Masquer</button></h2>
+                <div class="movies" id="ready-player-one-movies">
+                    <div class="card">
+                        <h3>Ready Player One</h3>
+                        <iframe src="https://filemoon.sx/e/lri81845b99q" scrolling="no" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
@@ -76,4 +107,4 @@
         }
     </script>
 </body>
-</html>
+                                         </html>
